push card n table

--- a/service.html
+++ b/service.html
@@ -254,59 +254,138 @@
 						<h2 class="title classic">Pricing Table</h2>
 					</div>
 				</div><!-- Title row end -->
+
+				<div class="container">
+					<div class="col-md-10 col-md-offset-1">
+						<table class="pricing-table-box">
+							<tbody>
+								<tr>
+									<td width="30%" class="pricing-table-box-text">
+										<h2>OUR <br/> SERVICES</h2>
+									</td>
+									<td width="20%">
+										<div class="pricing-table-box-item">
+											<div class="pricing-table-box-item-head color2">
+												<p>Bronze</p>
+											</div>
+											<div class="pricing-table-box-item-price color2">
+												<p>$50<span>/ yr</span></p>
+											</div>
+										</div>
+									</td>
+									<td width="20%">
+										<div class="pricing-table-box-item">
+											<div class="pricing-table-box-item-head color2">
+												<p>Silver</p>
+			
+											</div>
+											<div class="pricing-table-box-item-price color2">
+												<p>$120<span>/ yr</span></p>
+			
+											</div>
+			
+										</div>
+									</td>
+									<td width="20%">
+										<div class="pricing-table-box-item">
+											<div class="pricing-table-box-item-head color2">
+												<p>Platinum</p>
+			
+											</div>
+											<div class="pricing-table-box-item-price color2">
+												<p>$500<span>/ yr</span></p>
+											</div>
+			
+										</div>
+									</td>
+								</tr>
+			
+								<tr class="pricing-table-box-list">
+									<td class="first-row">Endpoint detection and reponse in social media platforms and websites</td>
+									<td class="second-row"><span class="fa fa-check"></span></td>
+									<td class="third-row"><span class="fa fa-check"></span></td>
+									<td class="fourth-row"><span class="fa fa-check"></span></td>
+								</tr>
+								
+								<tr class="pricing-table-box-list">
+									<td class="first-row">Handling of social media hacking threats</td>
+									<td class="second-row"><span class="fa fa-check"></span></td>
+									<td class="third-row"><span class="fa fa-check"></span></td>
+									<td class="fourth-row"><span class="fa fa-check"></span></td>
+								</tr>
+								<tr class="pricing-table-box-list">
+									<td class="first-row">Identification and response to any impersonation and infringement</td>
+									<td class="second-row"><span class="fa fa-times"></span></td>
+									<td class="third-row"><span class="fa fa-times"></span></td>
+									<td class="fourth-row"><span class="fa fa-times"></span></td>
+								</tr>
+								<tr class="pricing-table-box-list">
+									<td class="first-row">Provision of a monthly social media report</td>
+									<td class="second-row"><span class="fa fa-times"></span></td>
+									<td class="third-row"><span class="fa fa-times"></span></td>
+									<td class="fourth-row"><span class="fa fa-times"></span></td>
+								</tr>
+								<tr class="pricing-table-box-list">
+									<td class="first-row">Handling of private messages to ensure maximum security</td>
+									<td class="second-row"><span class="fa fa-times"></span></td>
+									<td class="third-row"><span class="fa fa-times"></span></td>
+									<td class="fourth-row"><span class="fa fa-times"></span></td>
+								</tr>
+								<tr class="pricing-table-box-list">
+									<td class="first-row">Provision of a fortnightly social media report</td>
+									<td class="second-row"><span class="fa fa-times"></span></td>
+									<td class="third-row"><span class="fa fa-times"></span></td>
+									<td class="fourth-row"><span class="fa fa-times"></span></td>
+								</tr>
+								<tr class="pricing-table-box-list">
+									<td class="first-row">Prediction of cyber threats on social media</td>
+									<td class="second-row"><span class="fa fa-times"></span></td>
+									<td class="third-row"><span class="fa fa-times"></span></td>
+									<td class="fourth-row"><span class="fa fa-times"></span></td>
+								</tr>
+								<tr class="pricing-table-box-list">
+									<td class="first-row">Provision of a weekly social media report</td>
+									<td class="second-row"><span class="fa fa-times"></span></td>
+									<td class="third-row"><span class="fa fa-times"></span></td>
+									<td class="fourth-row"><span class="fa fa-times"></span></td>
+								</tr>
+								<tr class="pricing-table-box-list">
+									<td class="first-row">Provision of a digital forensic report</td>
+									<td class="second-row"><span class="fa fa-times"></span></td>
+									<td class="third-row"><span class="fa fa-times"></span></td>
+									<td class="fourth-row"><span class="fa fa-times"></span></td>
+								</tr>
+								<tr class="pricing-table-box-list">
+									<td class="first-row">Support</td>
+									<td class="second-row">24/7</td>
+									<td class="third-row">24/7</td>
+									<td class="fourth-row">24/7</td>
+								</tr>
+								<tr class="pricing-table-box-list">
+									<td class="first-row"></td>
+									<td class="second-row">
+										<div class="pricing-table-box-item-purchase">
+											<button class="btn btn-success btn-block color2"><a href="contactus.html" >Contact</a></button>
+										</div>
+									</td>
+									<td class="third-row">
+										<div class="pricing-table-box-item-purchase">
+											<button class="btn btn-success btn-block color2"><a href="contactus.html" >Contact</a></button>
+										</div>
+									</td>
+									<td class="fourth-row">
+										<div class="pricing-table-box-item-purchase">
+											<button class="btn btn-success btn-block color2"><a href="contactus.html" >Contact</a></button>
+										</div>
+									</td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+
 				
-		  		<div class="row">
-					<!-- plan start -->
-					<div class="col-md-3 col-sm-6 wow fadeInUp" data-wow-delay=".5s">
-					    <div class="plan text-center">
-					        <span class="plan-name">Package</span>
-					        <p class="plan-price"><sup class="currency"></sup><strong>Bronze</strong></p>
-					        <ul class="list-unstyled">
-					            <li>Endpoint detection and reponse in social media platforms and websites</li>
-					            <li>Handling of social media hacking threats</li>
-					            <li>Identification and response to any impersonation and infringement</li>
-					            <li>Provision of a monthly social media report</li>
-					        </ul>
-					        <a class="btn btn-primary" href="contactus.html">Contact</a>
-					    </div>
-					</div><!-- plan end -->
 
-					<!-- plan start -->
-					<div class="col-md-3 col-sm-6 wow fadeInUp" data-wow-delay="1.4s">
-					    <div class="plan text-center featured">
-					        <span class="plan-name">Package</span>
-					        <p class="plan-price"><sup class="currency"></sup><strong>Silver</strong></p>
-					        <ul class="list-unstyled">
-					            <li>Endpoint detection and response in social media platforms, websites and the dark web</li>
-					            <li>Handling of social media hacking threats</li>
-					            <li>Identification and response to any impersonation and infringement</li>
-					            <li>Handling of private messages to ensure maximum security</li>
-					            <li>Provision of a fortnightly social media report</li>
-					        </ul>
-					        <a class="btn btn-primary" href="contactus.html">Contact</a>
-					    </div>
-					</div><!-- plan end -->
 
-					<!-- plan start -->
-					<div class="col-md-3 col-sm-6 wow fadeInUp" data-wow-delay="1s">
-					    <div class="plan text-center">
-					        <span class="plan-name">Package</span>
-					        <p class="plan-price"><sup class="currency"></sup><strong>Gold</strong></p>
-					        <ul class="list-unstyled">
-					            <li>Endpoint detection and response in social media platforms, websites and the dark web</li>
-					            <li>Identification and response to any impersonation and infringement</li>
-					            <li>Prediction of cyber threats on social media</li>
-					            <li>Handling of social media hacking threats </li>
-					            <li>Handling of private messages to ensure maximum security</li>
-								<li>Provision of a weekly social media report </li>
-					            <li>Provision of a digital forensic report</li>
-
-					        </ul>
-					        <a class="btn btn-primary" href="contactus.html">Contact</a>
-					    </div>
-					</div><!-- plan end -->
-
-				</div><!--/ Content row end -->
 			</div><!--/ Pricing table end -->
 
 		</div><!-- 2nd container end -->
