--- a/index.html
+++ b/index.html
@@ -207,8 +207,8 @@
 					<div class="tab-content col-md-9 col-sm-7">
 				        <div class="tab-pane active animated fadeInRight" id="tab_a">
 							<i class="fa fa-trophy big pull-left big"></i>	
-				            <h3>We are a team of passionate individuals</h3> 
-				            <p> working towards achieving the epitome  
+				            <h3>Who are we?</h3> 
+				            <p> We are a team of passionate individuals, working towards achieving the epitome  
 								of social media security. We have started off with a unique concept 
 								which is ever developing in order to secure virtual outlets of organizational and individual socializing, 
 								preserving brand reputation and organizational stature.</p>
@@ -227,26 +227,23 @@
 						
 				        <div class="tab-pane animated fadeIn" id="tab_b">
 				            <i class="fa fa-building-o pull-left big"></i>
-				            <h3>Easy Solution on Every Project</h3> 
-				            <p>Occupy selfies Tonx, +1 Truffaut beard organic normcore tilde flannel artisan squid cray single-origin coffee. Master cleanse vinyl Austin kogi, semiotics skateboard fap wayfarers health goth. Helvetica cray church-key hashtag Carles. Four dollar toast meggings seitan, Tonx pork belly VHS Bushwick. Chambray banh mi cornhole. Locavore messenger bag seitan.</p>
-				            <p>Helvetica cold-pressed lomo messenger bag ugh. Vinyl jean shorts Austin pork belly PBR retro, Etsy VHS kitsch actually messenger bag pug. semiotics try-hard, Schlitz occupy dreamcatcher master cleanse Marfa Vice tofu. </p>
+				            <h3>Our Company?</h3> 
+				            <p>CYBERACKER is an emerging new movement which entails the very essence of digitaliztion in the process of securing social media and all its related aspects of organizations. 
+								This will take the virtual outlet organizational and individual socializing to its best due
+								to the enhanced levels of security, integrity and confidentiality.</p>
 				        </div>
 
 						<div class="tab-pane animated fadeIn" id="tab_c">
 							<i class="fa fa-lock pull-left big"></i>
-				            <h3>We Build Ready made Web Applications for You</h3> 
-							<p> working towards achieving the epitome  
-								of social media security. We have started off with a unique concept 
-								which is ever developing in order to secure virtual outlets of organizational and individual socializing, 
-								preserving brand reputation and organizational stature.</p>
+				            <h3>What we do?</h3> 
+							<p> Securing social media accounts of both organizations and individuals though endpoint detection, identification of impersonations, prediction of cyber threats on social media and taking counter measures etc. </p>
 				        </div>
 				        <div class="tab-pane animated fadeIn" id="tab_d">
 				            <i class="fa fa-clock-o pull-left big"></i>
-				            <h3>Easy Solution on Every Project</h3> 
-				            <p>OCYBERACKER is an emerging new movement which entails the very essence of digitaliztion in the process of securing social media and all its related aspects of organizations. 
-								This will take the virtual outlet organizational and individual socializing to its best due
-								to the enhanced levels of security, integrity and confidentiality.gin coffee. Master cleanse vinyl Austin kogi, semiotics skateboard fap wayfarers health goth. Helvetica cray church-key hashtag Carles. Four dollar toast meggings seitan, Tonx pork belly VHS Bushwick. Chambray banh mi cornhole. Locavore messenger bag seitan.</p>
-				            <p>Helvetica cold-pressed lomo messenger bag ugh. Vinyl jean shorts Austin pork belly PBR retro, Etsy VHS kitsch actually messenger bag pug. semiotics try-hard, Schlitz occupy dreamcatcher master cleanse Marfa Vice tofu. </p>
+				            <h3>Why choose us?</h3> 
+				            <p>Accuracy and reliability of work and communication
+								Unique services to preserve brand reputation and integrity
+								Unmatched response time! </p>
 				        </div>
 						
 					</div><!-- tab content -->
