--- a/aboutus.html
+++ b/aboutus.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<!-- Mirrored from technext.github.io/bizcraft/about.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 30 Dec 2021 05:11:07 GMT -->
+	
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
 <head>
 
@@ -22,7 +21,7 @@
 	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/favicon/favicon-144x144.html">
 	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/favicon/favicon-72x72.html">
 	<link rel="apple-touch-icon-precomposed" href="img/favicon/favicon-54x54.html">
-	<link rel="icon" type="image/pngt" href="images/logoround.png">
+	<link rel="icon" type="image/pngt" href="images/Cyberacker-09.png">
 
 	
 	<!-- CSS
@@ -74,7 +73,7 @@
 						</button>
 					    <div class="navbar-brand">
 							<a href="index.html">
-								<img class="img-responsivelogo" src="images/logocyber.png" alt="logo">
+								<img class="img-responsivelogo" src="images/Cyberacker-06.png" alt="logo">
 							</a> 
 						</div>                   
 					</div><!--/ Logo end -->
@@ -325,7 +324,7 @@
 						  <div class="pic">
 						   <img src="images/ravindu.jpg" alt="John" style="width:100%">
 						  </div>
-						  <div class="name">Ravidnu</div>
+						  <div class="name">Ravindu</div>
 						  <div class="desc">BA</div>
 							<div class="sm">
 							<a href="#"><i class="fa fa-facebook"></i></a> 
@@ -339,7 +338,7 @@
 					  <div class="column">
 						<div class="card">
 						  <div class="pic">
-						   <img src="images/hazeena.jpeg" alt="John" style="width:100%">
+						   <img src="images/hazeena.jpg" alt="John" style="width:100%">
 						  </div>
 						  <div class="name">Hazeena</div>
 						  <div class="desc">BA</div>
@@ -370,7 +369,7 @@
 			<div class="col-sm-6 col-lg-3 py-3">
 			 
 			
-				<img class="img-foots" src="images/logocyber.png" alt="logo">
+				<img class="img-foots" src="images/Cyberacker-05.png" alt="logo">
 
 			 
 			</div>
