--- a/contactus.html
+++ b/contactus.html
@@ -22,7 +22,7 @@
 	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/favicon/favicon-144x144.html">
 	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/favicon/favicon-72x72.html">
 	<link rel="apple-touch-icon-precomposed" href="img/favicon/favicon-54x54.html">
-	<link rel="icon" type="image/pngt" href="images/logoround.png">
+	<link rel="icon" type="image/pngt" href="images/Cyberacker-09.png">
 
 	<!-- CSS
 	================================================== -->
@@ -73,7 +73,7 @@
 						</button>
 						<div class="navbar-brand">
 							<a href="index.html">
-								<img class="img-responsivelogo" src="images/logocyber.png" alt="logo">
+								<img class="img-responsivelogo" src="images/Cyberacker-06.png" alt="logo">
 							</a> 
 						</div>                
 					</div><!--/ Logo end -->
@@ -178,7 +178,7 @@
 			<div class="col-sm-6 col-lg-3 py-3">
 			 
 			
-				<img class="img-foots" src="images/logocyber.png" alt="logo">
+				<img class="img-foots" src="images/Cyberacker-05.png" alt="logo">
 
 			 
 			</div>
