push colour update march

--- a/aboutus.html
+++ b/aboutus.html
@@ -175,18 +175,18 @@
 					<div class="tab-content col-md-9 col-sm-7">
 				        <div class="tab-pane active animated fadeInRight" id="tab_a">
 				        	<i class="fa fa-trophy big"></i>
-				            <h3>We Are Awwared Winning Company</h3> 
-				            <p>Over the year we have lots of experience in our field. In sit amet massa sapien. Vestibulum diam turpis, gravida in lobortis id, ornare a eros. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sagittis nulla non elit dignissim suscipit. Duis lorem nulla, eleifend.</p>
+				            <h3>We Are Award Winning Company</h3> 
+				            <p>We are a team of passionate individuals, working towards achieving the epitome of social media security. We have started off with a unique concept which is ever developing in order to secure virtual outlets of organizational and individual socializing, preserving brand reputation and organizational stature.</p>
 				        </div>
 				        <div class="tab-pane animated fadeInLeft" id="tab_b">
 				        	<i class="fa fa-briefcase big"></i>
-				            <h3>We Have Worldwide Business</h3> 
-							<p>Helvetica cold-pressed lomo messenger bag ugh. Vinyl jean shorts Austin pork belly PBR retro, Etsy VHS kitsch actually messenger bag pug. Pbrb semiotics try-hard, Schlitz occupy dreamcatcher master cleanse Marfa Vice tofu. </p>							 
+				            <h3>CYBERACKER</h3> 
+							<p>CYBERACKER is an emerging new movement which entails the very essence of digitalization in the process of securing social media and all its related aspects of organizations. </p>							 
 				        </div>
 				        <div class="tab-pane animated fadeIn" id="tab_c">
 				            <i class="fa fa-android big"></i>
 				            <h3>We Build Readymade Applications</h3> 
-				            <p>Over the year we have lots of experience in our field. In sit amet massa sapien. Vestibulum diam turpis, gravida in lobortis id, ornare a eros. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sagittis nulla non elit dignissim suscipit. Duis lorem nulla, eleifend.</p>
+				            <p>Our main job role is social media monitoring. we are also focused more on professional web development.</p>
 				        </div>
 				        <div class="tab-pane animated fadeIn" id="tab_d">
 				            <i class="fa fa-pagelines big"></i>
@@ -240,7 +240,7 @@
 					</div>
 
 					<div class="facts col-md-3 col-sm-6">
-						<span class="facts-icon"><i class="fa fa-trophy"></i></span>
+						<span class="facts-icon"><i class="fa fa-laptop"></i></span>
 						<div class="facts-num">
 							<span class="counter">76</span>
 						</div>
@@ -274,11 +274,11 @@
 					<div class="column">
 					  <div class="card">
 						<div class="pic">
-						 <img src="images/gihantha.jpeg" alt="John" style="width:100%">
+						 <img src="images/chalana.jpeg" alt="John" style="width:100%">
 						</div>
-						<div class="name">Gihantha</div>
-						<div class="desc">BA</div>
-						<div class="sm">
+						<div class="name">Chalana Kanishka</div>
+						<div class="desc">Chairman</div>
+					  <div class="sm">
 						  <a href="#"><i class="fa fa-facebook"></i></a> 
 						  <a href="#"><i class="fa fa-twitter"></i></a>  
 						  <a href="#"><i class="fa fa-linkedin"></i></a>  
@@ -290,10 +290,10 @@
 					<div class="column">
 						<div class="card">
 						  <div class="pic">
-						   <img src="images/tharindu.jpg" alt="John" style="width:100%">
+						   <img src="images/gihantha.jpeg" alt="John" style="width:100%">
 						  </div>
-						  <div class="name">Tharindu</div>
-						  <div class="desc">BA</div>
+						  <div class="name">Gihantha Kavishka</div>
+						  <div class="desc">CEO</div>
 							<div class="sm">
 							<a href="#"><i class="fa fa-facebook"></i></a> 
 							<a href="#"><i class="fa fa-twitter"></i></a>  
@@ -306,10 +306,10 @@
 					  <div class="column">
 						<div class="card">
 						  <div class="pic">
-						   <img src="images/chalana.jpeg" alt="John" style="width:100%">
+						   <img src="images/hazeena.jpg" alt="John" style="width:100%">
 						  </div>
-						  <div class="name">Chalana</div>
-						  <div class="desc">BA</div>
+						  <div class="name">Hazeena Isham</div>
+						  <div class="desc">CAO</div>
 							<div class="sm">
 							<a href="#"><i class="fa fa-facebook"></i></a> 
 							<a href="#"><i class="fa fa-twitter"></i></a>  
@@ -324,8 +324,8 @@
 						  <div class="pic">
 						   <img src="images/ravindu.jpg" alt="John" style="width:100%">
 						  </div>
-						  <div class="name">Ravindu</div>
-						  <div class="desc">BA</div>
+						  <div class="name">Ravindu Porutota</div>
+						  <div class="desc">Ass. Softwre Developer</div>
 							<div class="sm">
 							<a href="#"><i class="fa fa-facebook"></i></a> 
 							<a href="#"><i class="fa fa-twitter"></i></a>  
@@ -338,10 +338,10 @@
 					  <div class="column">
 						<div class="card">
 						  <div class="pic">
-						   <img src="images/hazeena.jpg" alt="John" style="width:100%">
+						   <img src="images/tharindu.jpg" alt="John" style="width:100%">
 						  </div>
-						  <div class="name">Hazeena</div>
-						  <div class="desc">BA</div>
+						  <div class="name">Tharindu Gayantha</div>
+						  <div class="desc">Ass. Softwre Developer</div>
 							<div class="sm">
 							<a href="#"><i class="fa fa-facebook"></i></a> 
 							<a href="#"><i class="fa fa-twitter"></i></a>  
@@ -368,10 +368,10 @@
 		  <div class="row px-md-3">
 			<div class="col-sm-6 col-lg-3 py-3">
 			 
-			
-				<img class="img-foots" src="images/Cyberacker-05.png" alt="logo">
+				<a href="index.html">
+					<img class="img-foots" src="images/Cyberacker-05.png" alt="logo">
+				</a>
 
-			 
 			</div>
 			<div class="col-sm-6 col-lg-3 py-3">
 			  <h5>Site Map</h5>
@@ -393,7 +393,7 @@
 			  <h5>Contact</h5>
 			  <p class="footer-link mt-2"><i class="fa fa-map-marker"></i> Colombo, Sri Lanka </p>
 			  <a href="tel:contactus.html" class="footer-link"><i class="fa fa-phone"></i>+94 716 513 213</a>				
-			  <a href="mailto:cyberacker.sl@gmail.com" class="footer-link"><i class="fa fa-envelope"></i>cyberacker.sl@gmail.com</a>
+			  <a href="mailto:info@cyberacker.lk" class="footer-link"><i class="fa fa-envelope"></i>info@cyberacker.lk</a>
 	
 			  <h5 class="mt-3">Social Media</h5>
 			  <div class="footer-sosmed mt-3">
