--- a/contactus.html
+++ b/contactus.html
@@ -162,7 +162,7 @@
 			    		<br>
 			    		<p><i class="fa fa-map-marker"></i><a href="#">Colombo, Sri Lanka</a>  </p>
 						<p><i class="fa fa-phone info"></i><a href="tel:+94716513213"> +94 716 513 213</a>  </p>
-						<p><i class="fa fa-envelope-o info"></i> <a href="mailto:cyberacker.sl@gmail.com">cyberacker.sl@gmail.com</a>  </p>
+						<p><i class="fa fa-envelope-o info"></i> <a href="mailto:info@cyberacker.lk">info@cyberacker.lk</a>  </p>
     				</div>
 	    		</div>
 	    	</div><br>		
@@ -177,10 +177,9 @@
 		  <div class="row px-md-3">
 			<div class="col-sm-6 col-lg-3 py-3">
 			 
-			
-				<img class="img-foots" src="images/Cyberacker-05.png" alt="logo">
-
-			 
+				<a href="index.html">
+					<img class="img-foots" src="images/Cyberacker-05.png" alt="logo">
+				</a>			 
 			</div>
 			<div class="col-sm-6 col-lg-3 py-3">
 			  <h5>Site Map</h5>
@@ -202,7 +201,7 @@
 			  <h5>Contact</h5>
 			  <p class="footer-link mt-2"><i class="fa fa-map-marker"></i> Colombo, Sri Lanka </p>
 			  <a href="tel:contactus.html" class="footer-link"><i class="fa fa-phone"></i>+94 716 513 213</a>				
-			  <a href="mailto:cyberacker.sl@gmail.com" class="footer-link"><i class="fa fa-envelope"></i>cyberacker.sl@gmail.com</a>
+			  <a href="mailto:info@cyberacker.lk" class="footer-link"><i class="fa fa-envelope"></i>info@cyberacker.lk</a>
 	
 			  <h5 class="mt-3">Social Media</h5>
 			  <div class="footer-sosmed mt-3">
