--- a/pricing.html
+++ b/pricing.html
@@ -137,15 +137,35 @@
 				<!-- plan start -->
 				<div class="col-md-4 col-sm-6 wow fadeInUp" data-wow-delay=".5s">
 				    <div class="plan text-center">
-				        <span class="plan-name">Basic <small>Monthly plan</small></span>
-				        <p class="plan-price"><sup class="currency">$</sup><strong>49</strong><sub>.99</sub></p>
+				        <span class="plan-name">BRONZE <small>Monthly plan</small></span>
+				        <p class="plan-price"><sup class="currency">$</sup><strong>149</strong><sub>.00</sub></p>
 				        <ul class="list-unstyled">
-				            <li>100GB Monthly Bandwidth</li>
-				            <li>$100 Google AdWords</li>
-				            <li>100 Domain Hosting</li>
-				            <li>SSL Shopping Cart</li>
-				            <li>24/7 Live Support</li>
-                            <li>$100 Google AdWords</li>
+				            <li>Endpoint detection and reponse in social media platforms and websites</li>
+				            <li>Handling of social media hacking threats</li>
+				            <li>Identification and response to any impersonation and infringement</li>
+				            <li>Provision of a monthly social media report</li>
+				            <li><del>Handling of private messages to ensure maximum security</del></li>
+							<li><del>Prediction of cyber threats on social media</del></li>
+							<li><del>Provision of a digital forensic report</del></li>
+								
+			        </ul>
+				        <a class="btn btn-primary" href="contactus.html">Get Now</a>
+				    </div>
+				</div><!-- plan end -->
+
+				<!-- plan start -->
+				<div class="col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="1s">
+				    <div class="plan text-center">
+				        <span class="plan-name">SILVER <small>Monthly plan</small></span>
+				        <p class="plan-price"><sup class="currency">$</sup><strong>229</strong><sub>.00</sub></p>
+				        <ul class="list-unstyled">
+				            <li>Endpoint detection and response in social media platforms, websites and the dark web</li>
+				            <li>Handling of social media hacking threats </li>
+				            <li>Identification and response to any impersonation and infringement</li>
+							<li>Provision of a monthly social media report</li>
+				            <li>Handling of private messages to ensure maximum security</li>
+							<li><del>Prediction of cyber threats on social media</del></li>
+							<li><del>Provision of a digital forensic report</del></li>
 
 				        </ul>
 				        <a class="btn btn-primary" href="contactus.html">Get Now</a>
@@ -155,32 +175,17 @@
 				<!-- plan start -->
 				<div class="col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="1s">
 				    <div class="plan text-center">
-				        <span class="plan-name">Standared <small>Monthly plan</small></span>
-				        <p class="plan-price"><sup class="currency">$</sup><strong>99</strong><sub>.99</sub></p>
+				        <span class="plan-name">GOLD <small>Monthly plan</small></span>
+				        <p class="plan-price"><sup class="currency">$</sup><strong>379</strong><sub>.00</sub></p>
 				        <ul class="list-unstyled">
-				            <li>100GB Monthly Bandwidth</li>
-				            <li>$100 Google AdWords</li>
-				            <li>100 Domain Hosting</li>
-				            <li>SSL Shopping Cart</li>
-                            <li>$100 Google AdWords</li>
-				            <li>24/7 Live Support</li>
-				        </ul>
-				        <a class="btn btn-primary" href="contactus.html">Get Now</a>
-				    </div>
-				</div><!-- plan end -->
+				            <li>Endpoint detection and response in social media platforms, websites and the dark web</li>
+							<li>Handling of social media hacking threats</li>
+				            <li>Identification and response to any impersonation and infringement</li>
+				            <li>Provision of a monthly social media report</li>
+                            <li>Handling of private messages to ensure maximum security</li>
+				            <li>Prediction of cyber threats on social media</li>
+							<li>Provision of a digital forensic report</li>
 
-				<!-- plan start -->
-				<div class="col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="1s">
-				    <div class="plan text-center">
-				        <span class="plan-name">Standared <small>Monthly plan</small></span>
-				        <p class="plan-price"><sup class="currency">$</sup><strong>99</strong><sub>.99</sub></p>
-				        <ul class="list-unstyled">
-				            <li>100GB Monthly Bandwidth</li>
-				            <li>$100 Google AdWords</li>
-				            <li>100 Domain Hosting</li>
-				            <li>SSL Shopping Cart</li>
-                            <li>$100 Google AdWords</li>
-				            <li>24/7 Live Support</li>
 				        </ul>
 				        <a class="btn btn-primary" href="contactus.html">Get Now</a>
 				    </div>
@@ -202,6 +207,8 @@
 			</div>
 		</div>
 	</section>
+
+
 
 
 
