--- a/service.html
+++ b/service.html
@@ -247,7 +247,7 @@
 				<div class="col-md-12">
 					<div class="col-md-3 col-sm-3 wow fadeInDown" data-wow-delay=".5s">
 						<div class="service-content text-center">
-							<span class="service-icon icon-pentagon"><i class="fa fa-shield"></i></span>
+							<span class="service-icon icon-pentagon"><i class="fa fa-laptop"></i></span>
 							<h3>Responsive</h3>
 							<p>Fully responsive website that matches all screen sizes </p>
 
@@ -256,7 +256,7 @@
 
 					<div class="col-md-3 col-sm-3 wow fadeInDown" data-wow-delay=".8s" >
 						<div class="service-content text-center">
-							<span class="service-icon icon-pentagon"><i class="fa fa-bug"></i></span>
+							<span class="service-icon icon-pentagon"><i class="fa fa-shield"></i></span>
 							<h3>Secure</h3>
 							<p>Secure websites with maximum protection enabled</p>
 
@@ -266,7 +266,7 @@
 
 					<div class="col-md-3 col-sm-3 wow fadeInDown" data-wow-delay="1.1s">
 						<div class="service-content text-center">
-							<span class="service-icon icon-pentagon"><i class="fa fa-calendar"></i></span>
+							<span class="service-icon icon-pentagon"><i class="fa fa-line-chart"></i></span>
 							<h3>SEO</h3>
 							<p>Search Engine Optimization to bring your site to the top list</p>
 
@@ -276,7 +276,7 @@
 
 					<div class="col-md-3 col-sm-3 wow fadeInDown" data-wow-delay="1.4s">
 						<div class="service-content text-center">
-							<span class="service-icon icon-pentagon"><i class="fa fa-laptop"></i></span>
+							<span class="service-icon icon-pentagon"><i class="fa fa-check"></i></span>
 							<h3>Quality Assured</h3>
 							<p>Website quality and code standard is well maintained and checked before launching </p>
 
@@ -291,7 +291,7 @@
 				<div class="col-md-12">
 					<div class="col-md-3 col-sm-3 wow fadeInDown" data-wow-delay=".5s">
 						<div class="service-content text-center">
-							<span class="service-icon icon-pentagon"><i class="fa fa-user-secret" aria-hidden="true"></i></span>
+							<span class="service-icon icon-pentagon"><i class="fa fa-code" aria-hidden="true"></i></span>
 							<h3>Functional</h3>
 							<p>All functionalities of the website is tested throughout the development progress</p>
 
@@ -301,7 +301,7 @@
 
 					<div class="col-md-3 col-sm-3 wow fadeInDown" data-wow-delay=".8s" >
 						<div class="service-content text-center">
-							<span class="service-icon icon-pentagon"><i class="fa fa-desktop"></i> </span>
+							<span class="service-icon icon-pentagon"><i class="fa fa-mobile"></i> </span>
 							<h3>Mobile Friendly </h3>
 							<p>Website responsiveness and functionalities are working with any device </p>
 
@@ -311,7 +311,7 @@
 
 					<div class="col-md-3 col-sm-3 wow fadeInDown" data-wow-delay="1.1s">
 						<div class="service-content text-center">
-							<span class="service-icon icon-pentagon"><i class="fa fa-bar-chart" aria-hidden="true"></i></span>
+							<span class="service-icon icon-pentagon"><i class="fa fa-usd" aria-hidden="true"></i></span>
 							<h3>Cost Effective</h3>
 							<p>Best website developed for the best price</p>
 
@@ -320,7 +320,7 @@
 
 					<div class="col-md-3 col-sm-3 wow fadeInDown" data-wow-delay="1.4s">
 						<div class="service-content text-center">
-							<span class="service-icon icon-pentagon"><i class="fa fa-search"></i></span>
+							<span class="service-icon icon-pentagon"><i class="fa fa-phone"></i></span>
 							<h3>Great Support Service</h3>
 							<p>Fullest support throughout the development and after launching</p>
 
