--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <!-- Mirrored from templates.iqonic.design/qwilo/html/qwilo/home-2.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 17 Jun 2022 06:43:06 GMT -->
 
 <head>
-    <title>Qwilo - Multi-purpose Responsive HTML5 Template</title>
+    <title>CYBERACKER</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -673,7 +673,7 @@ Footer-13 -->
                     </ul>
                 </div>
                 <div class="col-sm-6">
-                    <div class="iq-copyright">Copyright <span id="copyright"> <script>document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))</script></span> <a href="#">Qwilo</a> All Rights Reserved </div>
+                    <div class="iq-copyright">Copyright <span id="copyright"> <script>document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))</script></span> <a href="#">Cyberacker</a> All Rights Reserved </div>
                 </div>
             </div>
         </div>
@@ -890,6 +890,5 @@ Register -->
 </body>
 
 
-<!-- Mirrored from templates.iqonic.design/qwilo/html/qwilo/home-2.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 17 Jun 2022 06:43:15 GMT -->
 
 </html>
