Main Update before launch

--- a/contactus.html
+++ b/contactus.html
@@ -86,24 +86,28 @@
                             </ul>
                             <!-- menu links -->
                             <ul class="menu-links">
-
                                 <li><a href="./index.html">Home</a>
                                     <!-- drop down full width -->
                                 </li>
-                                <li><a href="./services.html">Services</a>
+                                <li><a href="./clients.html">Our Clients</a>
                                     <!-- drop down multilevel  -->
-                                    <ul class="drop-down-multilevel">
+                                    <!-- <ul class="drop-down-multilevel">
                                         <li><a href="./webdevelopement.html" target="_blank">Web Development<i
                                                     class="fa fa-angle-right fa-indicator"></i> </a>
                                         <li><a href="./cybersecurity.html" target="_blank">Cyber Security<i
-                                                    class="fa fa-angle-right fa-indicator"></i> </a>
+                                                    class="fa fa-angle-right fa-indicator"></i> </a> -->
                                             <!-- drop down second level -->
-                                        </li>
-                                    </ul>
+                                        <!-- </li>
+                                    </ul> -->
                                 </li>
-                                <li><a href="./aboutus.html">About Us</a>
+                               
+                                <li><a href="./webdevelopement.html">Web Development</a>
                                 </li>
-                                <li class="active"><a href="./contactus.html">Contact Us</a>
+                                <li><a href="./cybersecurity.html">Cyber Security</a>
+                                </li>
+                                <li><a href="aboutus.html">About Us</a>
+                                </li>
+                                <li  class="active"><a href="./contactus.html">Contact Us</a>
                                 </li>
                             </ul>
                         </div>
