--- a/cybersecurity.html
+++ b/cybersecurity.html
@@ -88,18 +88,22 @@
                             <ul class="menu-links">
                                 <li><a href="./index.html">Home</a>
                                     <!-- drop down full width -->
-
                                 </li>
-                                <li class="active"><a href="./services.html">Services</a>
+                                <li><a href="./clients.html">Our Clients</a>
                                     <!-- drop down multilevel  -->
-                                    <ul class="drop-down-multilevel">
-                                        <li><a href="./webdevelopement.html">Web Development<i
+                                    <!-- <ul class="drop-down-multilevel">
+                                        <li><a href="./webdevelopement.html" target="_blank">Web Development<i
                                                     class="fa fa-angle-right fa-indicator"></i> </a>
-                                        <li><a href="./cybersecurity.html">Cyber Security<i
-                                                    class="fa fa-angle-right fa-indicator"></i> </a>
+                                        <li><a href="./cybersecurity.html" target="_blank">Cyber Security<i
+                                                    class="fa fa-angle-right fa-indicator"></i> </a> -->
                                             <!-- drop down second level -->
-                                        </li>
-                                    </ul>
+                                        <!-- </li>
+                                    </ul> -->
+                                </li>
+                               
+                                <li><a href="./webdevelopement.html">Web Development</a>
+                                </li>
+                                <li class="active"><a href="./cybersecurity.html">Cyber Security</a>
                                 </li>
                                 <li><a href="aboutus.html">About Us</a>
                                 </li>
@@ -419,11 +423,7 @@ Banner -->
                     <div class="small-title">
                         <h2 class="iq-tw-6 iq-mb-10">Qwilo is the Most Creative Template</h2>
                     </div>
-                    <div>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
-                        printer took a galley of type and scrambled it to make a type specimen book. <strong>Lorem Ipsum
-                            has been the industry's standard dummy text </strong> ever since the 1500s.
-                    </div>
-                    <div class="iq-mt-10 iq-font-italic">Lorem Ipsum has been the industry's standard dummy text ever
+                    <div class="iq-mt-10 iq-font-bold text-justify">Lorem Ipsum has been the industry's standard dummy text ever
                         since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
                         specimen book. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
                         when an unknown printer took a galley of type and scrambled it to make a type specimen book.
@@ -448,7 +448,7 @@ Custom -->
                         <div class="content-blog">
                             <i class="ion-ios-photos-outline iq-font-white"></i>
                             <h4 class="iq-font-green iq-tw-6 iq-mt-20 iq-mb-10">Creative Ideas</h4>
-                            <p class="text-gray">Lorem Ipsum is simply dummy text ever sincehar the 1500s, when an
+                            <p class="text-gray text-justify">Lorem Ipsum is simply dummy text ever sincehar the 1500s, when an
                                 unknownshil printer took a galley of type and scrambled it to make a type specimen book.
                                 It has survived not only five centuries.</p>
                         </div>
@@ -460,7 +460,7 @@ Custom -->
                         <div class="content-blog">
                             <i class="ion-ios-speedometer-outline iq-font-white"></i>
                             <h4 class="iq-font-white iq-tw-6 iq-mt-20 iq-mb-10">Beautiful Blog</h4>
-                            <p class="text-gray">Lorem Ipsum is simply dummy text ever sincehar the 1500s, when an
+                            <p class="text-gray text-justify">Lorem Ipsum is simply dummy text ever sincehar the 1500s, when an
                                 unknownshil printer took a galley of type and scrambled it to make a type specimen book.
                                 It has survived not only five centuries.</p>
                         </div>
@@ -472,7 +472,7 @@ Custom -->
                         <div class="content-blog">
                             <i class="ion-ios-photos-outline iq-font-white"></i>
                             <h4 class="iq-font-green iq-tw-6 iq-mt-20 iq-mb-10"> User Friendly</h4>
-                            <p class="text-gray">Lorem Ipsum is simply dummy text ever sincehar the 1500s, when an
+                            <p class="text-gray text-justify">Lorem Ipsum is simply dummy text ever sincehar the 1500s, when an
                                 unknownshil printer took a galley of type and scrambled it to make a type specimen book.
                                 It has survived not only five centuries.</p>
                         </div>
